2009-01-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/LocalCopyTests.cs: Update local-copy test to make
	sure paths are included. Covers "Bug 459311 - Copying files to output
	directory in MonoDevelop".

2009-01-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Added unit tests
	for the refactoring layer.

2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added test for
	Bug 459682 - Static methods/properties don't show up in subclasses.

2009-01-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added unit test
	for 'Bug 457237 - code completion doesn't show static methods when
	setting global variable'.

2009-01-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added test for
	'Bug 457003 - code completion shows variables out of scope'.

2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added test for
	'Bug 460234 - Invalid options shown when typing 'override''.

2008-12-16  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* UnitTests.mdp:
	* MonoDevelop.Projects/CompletionDatabaseTests.cs: Added new tests for
	the code completion database.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* UnitTests.mdp: Fix target framework and some references.

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs: Set
	correct base class.

2008-11-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: added unit test
	for 'Bug 447985 - Exception display tip is inaccurate for derived
	(custom) exceptions'.

2008-11-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Fixed unit tests.

2008-11-14  Mike Krüger  <mkrueger@novell.com>
