@@ -1,3 +1,8 @@
+2009-01-13  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: added find event
+	tests. 
+
 2009-01-12  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Projects/LocalCopyTests.cs: Update local-copy test to make
